# Computational-Methods-for-Finding-the-Stable-State-of-Convex-Morphable-Meshes

./: .gitignore  CMakeLists.txt  README.md
3rdPartySoftware/MeshLib/core/Mesh/: BaseMesh.h
CutGraph_Save_1/: CutGraph_Save_1.sln
CutGraph_Save_1/CutGraph_Save_1/: CutGraph.cpp  CutGraph_Save_1.vcxproj  CutGraph_Save_1.vcxproj.filters  Viewer.cpp
CutGraph_Save_1/CutGraph_Save_1/x64/Debug/: vc143.idb
CutGraph_Save_1/CutGraph_Save_1/x64/Debug/CutGraph_Save_1.tlog/: CutGraph_Save_1.lastbuildstate
cutgraph/include/: CutGraph.h  CutGraphMesh.h
cutgraph/src/: CutGraph.cpp  Viewer.cpp
data/: alexandrov's confusing capitulation theorem.kra  base.m  disk.m  hexagon.m  init_pentagon_curvatures.txt  octagon.m  pentagon.m  pyramid+.m  pyramid.m  pyramid_plus.m  test.m  trihex+.m  trihex.m
